--- a/index.html
+++ b/index.html
@@ -24,7 +24,52 @@
     <!-- * ======== My style Sheet -->
     <link rel="stylesheet" href="CSS/style.css" />
   </head>
-  <body>
+  <body data-bs-spy="scroll" data-bs-target="#navbar">
+    <!-- ^ _______________ {Navbar Section} _______________ -->
+    <nav id="#navbar" class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
+      <div class="container">
+        <a class="fs-3 fw-bold text-black text-decoration-none" href="#"
+          >Kerri</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#home">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#services">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#client">Client</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#portfolio">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#blog">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
     <!-- ^ _______________ {Header Section} _______________ -->
     <header
       id="home"
@@ -45,6 +90,65 @@
       </div>
     </header>
 
+    <!-- ^ _______________ {About Section} _______________ -->
+    <section id="about" class="about py-5">
+      <div class="container py-4">
+        <div class="row  align-items-center">
+          <div class="col-lg-6 col-12">
+            <img
+              class="w-100 p-1 border-1 rounded-1"
+              src="./images/about.jpg"
+              alt="about"
+            />
+          </div>
+          <div class="col-lg-6 col-12 pt-3 pt-md-0 ">
+            <h2><span class="fw-bold">About</span> Me</h2>
+            <h3>Hello! <span class="text-main">I'M Kerri Deo.</span></h3>
+            
+            <p class="color-muted  ">
+              It is a long established fact that a reader will be distracted by
+              the readable content of a page when looking at its layout.
+            </p>
+
+            <p class="color-muted">
+              The point of using Lorem Ipsum is that it has a more-or-less
+              normal distribution of letters, as opposed to using 'Content here,
+              content here', making it look like readable English.
+            </p>
+
+            <p class="color-muted">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised words which don't look even
+              slightly believable.
+            </p>
+
+            <ul class=" social-links list-unstyled d-flex gap-2 ">
+                <li>
+                    <a href="https://faxebook.com" target="_blank">
+                        <i class="fa-brands fa-facebook-f"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://twitter.com" target="_blank">
+                        <i class="fa-brands fa-twitter"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com" target="_blank">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://linkedin.com" target="_blank">
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- & link JS -->
     <script src="JS/bootstrap.bundle.min.js"></script>
   </body>
